--- a/src/lib/styles/theme.css
+++ b/src/lib/styles/theme.css
@@ -47,6 +47,7 @@
 	--color-background: #04020a;
 
 	--color-card-background-0: #141c3200;
+	--color-card-background-20: #141c3220;
 	--color-card-background: #141c32;
 	--color-card-background-dark: #0d1323;
 	--color-card-border: #091024;
