feat: new design

--- a/src/lib/styles/theme.css
+++ b/src/lib/styles/theme.css
@@ -53,6 +53,7 @@
 
 	--color-background: #04020a;
 	--color-background-blue: #0f172a;
+	--color-background-blue-0: #0f172a00;
 
 	--color-card-background-0: #141c3200;
 	--color-card-background-20: #141c3220;
