--- a/src/lib/styles/theme.css
+++ b/src/lib/styles/theme.css
@@ -76,8 +76,12 @@
 	}
 
 	.bg-static {
-		position: relative;
-		z-index: -1;
+		position: absolute;
+		inset: 0;
+		width: 100%;
+		height: 100%;
+		z-index: 0;
+		pointer-events: none;
 
 		&:after {
 			content: '';
