chore: update everything

--- a/src/lib/styles/theme.css
+++ b/src/lib/styles/theme.css
@@ -24,46 +24,86 @@
 	--font-mono: var(--font-code);
 
 	/* *Colors */
-	--color-white: #fffbfe;
-	--color-offwhite: #e1dbd8;
-	--color-slate: #546487;
+	--white-oklch: 0.992 0.0058 333.98;
+	--offwhite-oklch: 0.8953 0.0078 48.64;
+	--slate-oklch: 0.5043 0.0594 265.34;
 
-	--color-orange-0: #ff490000;
-	--color-orange-20: #ff895a14;
-	--color-orange-40: #ff490028;
-	--color-orange-60: #ff49003c;
-	--color-orange: #ff4900;
+	--color-white: oklch(var(--white-oklch));
+	--color-offwhite: oklch(var(--offwhite-oklch));
+	--color-slate: oklch(var(--slate-oklch));
 
-	--color-orange-light-0: #ff895a00;
-	--color-orange-light-20: #ff895a20;
-	--color-orange-light-40: #ff895a40;
-	--color-orange-light: #ff895a;
-	--color-orange-white: #f9cbbd;
+	--orange-oklch: 0.6638 0.226491 36.1662;
+	--orange-light-oklch: 0.7515 0.1562 41.82;
+	--orange-white-oklch: 0.8784 0.0559 37.59;
 
-	--color-blue-0: #427aa100;
-	--color-blue-40: #427aa140;
-	--color-blue: #427aa1;
-	--color-blue-light: #99acd4;
+	--color-orange-0: oklch(var(--orange-oklch) / 0%);
+	--color-orange-20: oklch(var(--orange-oklch) / 20%);
+	--color-orange-40: oklch(var(--orange-oklch) / 40%);
+	--color-orange-60: oklch(var(--orange-oklch) / 60%);
+	--color-orange: oklch(var(--orange-oklch));
 
-	--color-purple-0: #7b6db200;
-	--color-purple-40: #7b6db240;
-	--color-purple: #7b6db2;
-	--color-purple-light: #aba2ce;
+	--color-orange-white: oklch(var(--orange-white-oklch));
+	--color-orange-light: oklch(var(--orange-light-oklch));
+	--color-orange-light-0: oklch(var(--orange-light-oklch) / 0%);
+	--color-orange-light-20: oklch(var(--orange-light-oklch) / 20%);
+	--color-orange-light-40: oklch(var(--orange-light-oklch) / 40%);
 
-	--color-background: #04020a;
-	--color-background-blue: #0f172a;
-	--color-background-blue-0: #0f172a00;
+	--blue-oklch: 0.6243 0.1892 256.13;
+	--light-blue-oklch: 0.8204 0.0856 253.07;
 
-	--color-card-background-0: #141c3200;
-	--color-card-background-20: #141c3220;
-	--color-card-background: #141c32;
-	--color-card-background-dark: #0d1323;
-	--color-card-border: #091024;
+	--color-blue: oklch(var(--blue-oklch));
+	--color-blue-0: oklch(var(--blue-oklch) / 0%);
+	--color-blue-40: oklch(var(--blue-oklch) / 40%);
+	--color-blue-light: oklch(var(--light-blue-oklch));
 
-	/* Unused Colors */
+	--violet-oklch: 0.489 0.295951 279.9372;
+	--violet-50-oklch: 0.8267 0.1007 299.05;
+	--violet-100-oklch: 0.7774 0.1318 298.81;
+	--violet-200-oklch: 0.6834 0.1907 296.64;
+	--violet-300-oklch: 0.5989 0.2412 292.74;
+	--violet-400-oklch: 0.5311 0.2782 287.39;
+	--violet-500-oklch: 0.489 0.295951 279.9372;
+	--violet-600-oklch: 0.4071 0.245252 280.5715;
+	--violet-700-oklch: 0.3218 0.1916 282.22;
+	--violet-800-oklch: 0.2295 0.1342 284.9;
+	--violet-900-oklch: 0.1273 0.0702 294.44;
+	--violet-950-oklch: 0.0546 0.0287 302.89;
+
+	--color-violet: oklch(var(--violet-oklch));
+	--color-violet-50: oklch(var(--violet-50-oklch));
+	--color-violet-100: oklch(var(--violet-100-oklch));
+	--color-violet-200: oklch(var(--violet-200-oklch));
+	--color-violet-300: oklch(var(--violet-300-oklch));
+	--color-violet-400: oklch(var(--violet-400-oklch));
+	--color-violet-500: oklch(var(--violet-500-oklch));
+	--color-violet-600: oklch(var(--violet-600-oklch));
+	--color-violet-700: oklch(var(--violet-700-oklch));
+	--color-violet-800: oklch(var(--violet-800-oklch));
+	--color-violet-900: oklch(var(--violet-900-oklch));
+	--color-violet-950: oklch(var(--violet-950-oklch));
+
+	--background-oklch: 0.0997 0.0273 297.38;
+	--background-blue-oklch: 0.2077 0.0398 265.75;
+
+	--color-background: oklch(var(--background-oklch));
+	--color-background-blue: oklch(var(--background-blue-oklch));
+	--color-background-blue-0: oklch(var(--background-blue-oklch) / 0%);
+
+	--card-background-oklch: 0.231 0.0444 267.73;
+	--card-background-dark-oklch: 0.1898 0.034 267.52;
+	--card-border-oklch: 0.1788 0.0427 267.42;
+
+	--color-card-background-0: oklch(var(--card-background-oklch) / 0%);
+	--color-card-background-20: oklch(var(--card-background-oklch) / 20%);
+	--color-card-background: oklch(var(--card-background-oklch));
+	--color-card-background-dark: oklch(var(--card-background-dark-oklch));
+	--color-card-border: var(var(--card-border-oklch));
+
 	--color-red-0: #be123c00;
 	--color-red: #de0b31;
 	--color-red-light: #f64565;
+
+	/* *Container Sizes */
 
 	--width-8xl: 92rem;
 }
@@ -120,25 +160,71 @@
 		-webkit-text-fill-color: transparent;
 		line-height: 1.15;
 	}
-
 	.styled-border-orange-top,
-	.styled-border-orange-bottom {
+	.styled-border-blue-top,
+	.styled-border-violet-top {
+		position: relative;
+		&::before {
+			content: '';
+			position: absolute;
+			left: 0%;
+			top: 0;
+			width: 100%;
+			height: 1px;
+			@media (min-width: 1199px) {
+				left: -5%;
+				width: 110%;
+			}
+		}
+	}
+	.styled-border-orange-top {
+		&::before {
+			background: linear-gradient(
+				to right,
+				oklch(var(--orange-oklch) / 0%),
+				oklch(var(--orange-oklch) / 100%) 20%,
+				oklch(var(--orange-oklch) / 100%) 80%,
+				oklch(var(--orange-oklch) / 0%)
+			);
+		}
+	}
+
+	.styled-border-blue-top {
+		position: relative;
+		&::before {
+			background: linear-gradient(
+				to right,
+				oklch(var(--blue-oklch) / 0%),
+				oklch(var(--blue-oklch) / 100%) 20%,
+				oklch(var(--blue-oklch) / 100%) 80%,
+				oklch(var(--blue-oklch) / 0%)
+			);
+		}
+	}
+	.styled-border-violet-top {
+		position: relative;
+		&::before {
+			background: linear-gradient(
+				to right,
+				oklch(var(--violet-oklch) / 0%),
+				oklch(var(--violet-oklch) / 100%) 20%,
+				oklch(var(--violet-oklch) / 100%) 80%,
+				oklch(var(--violet-oklch) / 0%)
+			);
+		}
+	}
+	.styled-border-orange-bottom,
+	.styled-border-blue-bottom,
+	.styled-border-violet-bottom {
 		position: relative;
 
 		&::after {
 			content: '';
 			position: absolute;
 			left: 0%;
+			bottom: 0;
 			width: 100%;
 			height: 1px;
-			background: linear-gradient(
-				to right,
-				var(--color-orange-0),
-				var(--color-orange) 20%,
-				var(--color-orange) 80%,
-				var(--color-orange-0)
-			);
-
 			@media (min-width: 1199px) {
 				left: -5%;
 				width: 110%;
@@ -146,14 +232,49 @@
 		}
 	}
 
-	.styled-border-orange-top {
-		&::after {
-			top: 0;
-		}
-	}
 	.styled-border-orange-bottom {
 		&::after {
-			bottom: 0;
+			background: linear-gradient(
+				to right,
+				oklch(var(--orange-oklch) / 0%),
+				oklch(var(--orange-oklch) / 100%) 20%,
+				oklch(var(--orange-oklch) / 100%) 80%,
+				oklch(var(--orange-oklch) / 0%)
+			);
+		}
+	}
+
+	.styled-border-blue-bottom {
+		position: relative;
+		&::after {
+			background: linear-gradient(
+				to right,
+				oklch(var(--blue-oklch) / 0%),
+				oklch(var(--blue-oklch) / 100%) 20%,
+				oklch(var(--blue-oklch) / 100%) 80%,
+				oklch(var(--blue-oklch) / 0%)
+			);
+		}
+	}
+	.styled-border-violet-bottom {
+		position: relative;
+		&::after {
+			background: linear-gradient(
+				to right,
+				oklch(var(--violet-oklch) / 0%),
+				oklch(var(--violet-oklch) / 100%) 20%,
+				oklch(var(--violet-oklch) / 100%) 80%,
+				oklch(var(--violet-oklch) / 0%)
+			);
+		}
+	}
+
+	.btn {
+		padding: 0.75em 2em;
+		border-radius: 8px;
+
+		&:not(:disabled) {
+			cursor: pointer;
 		}
 	}
 }
