--- a/src/lib/styles/theme.css
+++ b/src/lib/styles/theme.css
@@ -48,7 +48,7 @@
 	--color-orange-light-20: oklch(var(--orange-light-oklch) / 20%);
 	--color-orange-light-40: oklch(var(--orange-light-oklch) / 40%);
 
-	--blue-oklch: 0.6243 0.1892 256.13;
+	--blue-oklch: 0.6331 0.1892 255.89;
 	--light-blue-oklch: 0.8204 0.0856 253.07;
 
 	--color-blue: oklch(var(--blue-oklch));
@@ -152,6 +152,45 @@
 	.center-content {
 		display: grid;
 		place-items: center;
+	}
+
+	.super-circ {
+		position: absolute;
+		left: 0%;
+		overflow: hidden;
+		z-index: 1;
+		width: 100%;
+		height: 350px;
+
+		&:after {
+			--color-start: oklch(var(--background-oklch) / 0%) 38%;
+			--color-1: oklch(var(--background-oklch) / 10%) 60%;
+			--color-2: oklch(var(--blue-oklch) / 40%) 76%;
+			--color-3: oklch(var(--violet-oklch) / 15%) 90%;
+			--color-4: oklch(var(--violet-oklch) / 15%) 94%;
+			--color-5: oklch(var(--white-oklch) / 70%) 95%;
+			--color-end: oklch(var(--background-oklch) / 1%);
+
+			content: '';
+			position: absolute;
+			top: 0;
+			left: 50%;
+			width: 100%;
+			height: 100%;
+			min-width: 1250px;
+			transform: translateX(-50%);
+
+			background: radial-gradient(
+				100% 100% at 50% 100%,
+				var(--color-start),
+				var(--color-1),
+				var(--color-2),
+				var(--color-3),
+				var(--color-4),
+				var(--color-5),
+				var(--color-end)
+			);
+		}
 	}
 
 	.gradient-text {
